# Flatcar

./: .gitignore  .lycheeignore  ADOPTERS.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  EMERITUS_MAINTAINERS.md  MAINTAINERS.md  ONBOARDING.md  README.md  RELEASES.md  SECURITY.md  adding-new-packages.md  adopters.md  contributions-git.md  governance  governance.md  idea  interop-matrix.md  lychee.toml  maintainers  pyproject.toml  test
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement-or-feature-request.md
.github/PULL_REQUEST_TEMPLATE/: default_pull_request_template.md
.github/workflows/: codeql.yml  issue-pr-contrib-metrics.yaml  link-check.yaml
CIS/: README.md  inspec-report-level1-root-2020-12-08.txt  inspec-report-level2-root-2020-12-08.txt  level1-remediation_notes-2020-12-08.md
attic/community-meetings/: 2021-06-08.md  2021-07-13.md  2021-07-26.md  2021-08-10.md  2021-08-23.md  2021-09-14.md  2021-10-19.md  2021-11-09.md  2021-11-23.md  2022-01-11.md  README.md
community-meetings/: 2021-05-11.md  2021-06-08.md  2021-07-13.md  2021-07-26.md  2021-08-10.md  2021-08-23.md  2021-09-14.md  2021-09-28.md  2021-10-19.md  2021-10-26.md  2021-11-09.md  2021-11-23.md  2021-12-14.md  2021-12-17.md
docs/: testing-evidence.md
sync-maintainers/: README  requirements.txt  sync-maintainers.py
sync-maintainers/Kuberneteessss/: kube.yaml  nginx.yaml  replicaset.yaml
tests/: conftest.py  test_setup_validation.py
